--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ branches:
     - hexoPrj # build master branch only
 script:
   - hexo generate # generate static files
+  - echo 'knn.ai' > public/CNAME
 deploy:
   provider: pages
   skip-cleanup: true
