--- a/themes/3-hexo/_config.yml
+++ b/themes/3-hexo/_config.yml
@@ -1,7 +1,7 @@
 version: 1.0.1
 # 你的头像url
-avatar: /img/avatar.jpg
-favicon: /img/avatar.jpg
+avatar: /img/momo.jpg
+favicon: /img/momo.jpg
 
 #如果博客放置位置不是根目录，则可以通过配置此路径解决静态文件路径错误问题
 # 比如访问地址为 yelog.org/blog 那就需要配置为 blog_path: /blog 才能正常访问
@@ -11,30 +11,30 @@ blog_path: /
 link:
   theme: color # 链接样式，color: 彩色图标  white: 黑白图标
   items:
-    rss: /atom.xml
-    github: https://github.com/yelog
-    facebook: https://www.facebook.com/faker.tops
-    twitter:
-    linkedin:
-    instagram: https://www.facebook.com/faker.tops
-    reddit: https://www.reddit.com/user/yelog/
-    weibo: http://weibo.com/u/2307534817
-    jianshu: https://www.jianshu.com/u/ff56736de7cf
-    zhihu: https://www.zhihu.com/people/jaytp/activities
-    csdn:
-    oschina: https://my.oschina.net/yelog
-    juejin:
-    email: jaytp@qq.com
-    qq: 872336115
-    kugou: https://www.kugou.com/
-    neteasemusic: https://music.163.com/#/user/home?id=88151013
+    # rss: /atom.xml
+
+    github: https://github.com/qiepeipei
+    # facebook: https://www.facebook.com/faker.tops
+    # twitter:
+    # linkedin:
+    # instagram: https://www.facebook.com/faker.tops
+    # reddit: https://www.reddit.com/user/yelog/
+    # weibo: http://weibo.com/u/2307534817
+    # jianshu: https://www.jianshu.com/u/ff56736de7cf
+    # zhihu: https://www.zhihu.com/people/jaytp/activities
+    # csdn:
+    # oschina: https://my.oschina.net/yelog
+    # juejin:
+    email: 964098704@qq.com
+    qq: 964098704
+    # kugou: https://www.kugou.com/
+    # neteasemusic: https://music.163.com/#/user/home?id=88151013
 
 ##########多作者模式############
 author:
-  on: false
+  on: true
   authors:
-    author1: 阿杰
-    author2: 小马哥
+    author1: 馍馍
 ##############################
 
 # 文章分类设置
@@ -54,11 +54,11 @@ category:
 # 左下角自定义菜单
 menu:
   about:  # '关于' 按钮
-    on: true # 是否显示
+    on: false # 是否显示
     url: /about  # 跳转链接
     type: 1 # 跳转类型 1：站内异步跳转 2：当前页面跳转 3：打开新的tab页
   friend: # '友链' 按钮
-    on: true # 是否展示
+    on: false # 是否展示
   menus: # 添加的其他菜单写在 menus 下，如下三个菜单：动态菜单1、动态菜单2、动态菜单3
     相册:
       on: false
@@ -74,13 +74,13 @@ menu:
       type: 3  # 跳转类型 3：打开新的tab页
 
 # 文末声明
-article_txt: 转载请注明来源，欢迎对文章中的引用来源进行考证，欢迎指出任何有错误或不够清晰的表达。可以在下面评论区评论，也可以邮件至 jaytp@qq.com
+article_txt: 转载请注明来源，欢迎对文章中的引用来源进行考证，欢迎指出任何有错误或不够清晰的表达。可以在下面评论区评论，也可以邮件至 964098704@qq.com
 
-bottom_text: ©2016-2019 Yelog
+bottom_text: ©2016-2019 馍馍
 # 自定义页面最下方的站点版权信息
 # 如果不填，则自定义为 ©2017 author (这个author为hexo根目录_config.yml中配置的)
 
-reward: true
+reward: false
 # true 开启打赏功能
 
 searchAll: false
@@ -165,7 +165,7 @@ code:
 highlight:
   on: true # true开启代码高亮
   lineNum: true # true显示行号
-  theme: atom-light
+  theme: gruvbox-light
 # 代码高亮主题,效果可以查看 https://highlightjs.org/static/demo/
 # 支持主题：
 # sublime : 参考sublime的高亮主题
@@ -264,18 +264,19 @@ gitment:
 
 ##########CND设置#############
 CDN:
-  jquery: //cdn.bootcss.com/jquery/2.2.4/jquery.min.js
-  jquery_cookie: //cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js
-  jquery_ui: //cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.js
-  jquery_ui_css: //cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.min.css
-  highlight: //cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js
-  pjax: //cdn.bootcss.com/jquery.pjax/2.0.1/jquery.pjax.min.js
-  animate: //cdn.bootcss.com/animate.css/3.5.2/animate.min.css
-  font_awsome: //cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css
-  nprogres_js: //cdn.bootcss.com/nprogress/0.2.0/nprogress.min.js
-  mathjax: //cdn.bootcss.com/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML
-  photoswipe_js: //cdn.bootcss.com/photoswipe/4.1.2/photoswipe.min.js
-  photoswipe_ui_js: //cdn.bootcss.com/photoswipe/4.1.2/photoswipe-ui-default.min.js
-  photoswipe_css: //cdn.bootcss.com/photoswipe/4.1.2/photoswipe.min.css
-  photoswipe_skin_css: //cdn.bootcss.com/photoswipe/4.1.2/default-skin/default-skin.min.css
+  jquery: //cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js
+  jquery_cookie: //cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js
+  jquery_ui: //cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js
+  jquery_ui_css: //cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css
+  highlight: //cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js
+  highlight_css: //cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/default.min.css
+  pjax: //cdnjs.cloudflare.com/ajax/libs/jquery.pjax/2.0.1/jquery.pjax.min.js
+  animate: //cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css
+  font_awsome: //cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css
+  nprogres_js: //cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.js
+  mathjax: //cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML
+  photoswipe_js: //cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe.min.js
+  photoswipe_ui_js: //cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe-ui-default.min.js
+  photoswipe_css: //cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe.min.css
+  photoswipe_skin_css: //cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/default-skin/default-skin.min.css
 ##############################
