--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ sudo: false
 language: node_js
 node_js:
   - 10 # use nodejs v10 LTS
-cache:
-  npm: false
+cache: false
 branches:
   only:
     - hexoPrj # build master branch only
