--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,6 @@ keywords:
 author: '馍馍'
 language: cn
 timezone: ''
-
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://yoursite.com
@@ -41,7 +40,7 @@ external_link:
   exclude: ''
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
 relative_link: false
 future: true
 highlight:
@@ -98,5 +97,8 @@ theme: 3-hexo
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: ''
+  type: git
+  repo: git@github.com:qiepeipei/qiepeipei.github.io.git
+  branch: master
+
   
